[package]
name = "untitled_planet_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
nalgebra-glm = "0.17.0"
rand = "0.8.5"
image = "0.24.4"
noise = "0.8.2"
egui = "0.19.0"
egui_glium = "0.19.0"